# codex-next-step-hooks

./: README.ja.md  README.ko.md  README.md  README.zh-CN.md  pyproject.toml
docs/: runtime-contract.md
src/codex_click_chooser_hooks/: __init__.py  cli.py  doctor.py  install.py  merge.py  observe.py  runtime_paths.py  selftest.py  uninstall.py
src/codex_click_chooser_hooks/hooks/: session_start_request_user_input_policy.py  stop_require_request_user_input.py
src/codex_next_step_hooks/: cli.py  doctor.py  install.py  merge.py  observe.py  runtime_paths.py  selftest.py  uninstall.py
src/codex_next_step_hooks/hooks/: stop_require_request_user_input.py
src/codex_next_step_hooks/templates/: hooks.json
tests/: explanatory_closure_should_request.json  obvious_next_step_should_auto_continue.json  surfaced_clear_next_step_should_auto_continue.json  surfaced_follow_up_choice_should_request.json  test_install.py  test_observe.py  test_policy_text.py  test_transcript_logging.py  tiny_verification_should_end.json
tests/fixtures/: completed_follow_up_recent_lane.jsonl  explanatory_closure_recent_lane.jsonl  obvious_next_step_recent_lane.jsonl  tiny_verification_recent_lane.jsonl
