[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-next-step-hooks"
version = "0.1.0"
description = "Recent-session-aware Codex next-step hooks with install, doctor, and self-test commands"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
codex-next-step-hooks = "codex_next_step_hooks.cli:main"
codex-click-chooser-hooks = "codex_next_step_hooks.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
codex_next_step_hooks = ["templates/*.json", "hooks/*.py"]
